--- a/haskell99.cabal
+++ b/haskell99.cabal
@@ -10,7 +10,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Haskell99
-  build-depends:       base >=4.8 && <4.9
+  build-depends:       base >=4.8 && <4.9, random
   ghc-options:         -Wall
   hs-source-dirs:	   src
   default-language:    Haskell2010
